# vitamin-cuda

./: .clang-format  .gitignore  .pre-commit-config.yaml  LICENSE  README.MD  README.md
docs/: kernel_fusion_rope.md  mat_transpose.md  numbers_cuda_programmer_should_know.md  sgemm_beating_cublas.md  understanding_your_gpu_with_device_query.md
kernels/common/: pack.cuh
kernels/cumsum/: cumsum.cu  readme.md  test.py
kernels/dot_product/: dot_product.cu  readme.md  test.py
kernels/elementwise/: elementwise.cu  readme.md  test.py
kernels/elu/: elu.cu  readme.md  test.py
kernels/embedding/: embedding.cu  readme.md  test.py
kernels/flash_attn/: flash_attn.cu  readme.md  run_ncu.sh  test.py  test_for_ncu.py
kernels/flash_decode/: flash_decode.cu  readme.md  run_ncu.sh  test.py  test_for_ncu.py
kernels/gelu/: gelu.cu  readme.md  test.py
kernels/hardswish/: hardswish.cu  readme.md  test.py
kernels/hgemm/: cublas.cu  hgemm.cu  readme.md  run_ncu.sh  test.py  test_for_ncu.py
kernels/hgemm_sm120/: hgemm_sm120.cu  readme.md  test.py  test_for_ncu.py
kernels/mat_transpose/: readme.md  run_ncu.sh  test.py  test_.py  transpose.cu
kernels/normalization/: norm.cu  readme.md  test.py
kernels/reduce/: readme.md  reduce.cu  reduce_sum.cu  (+1 more)
posts/: hgemm_beating_cublas.md  hgemm_sm120_tma.md  hgemm_tf32_beating_cublas.md  kernel_fusion_rope.md  numbers_cuda_programmer_should_know.md  safe_online_softmax.md  sgemm_beating_cublas.md  sgemm_tf32_beating_cublas.md  sgemm_tf32_beating_cublas_draft.md
samples/deviceQuery/: CMakeLists.txt  deviceQuery.cpp  run.sh
(+87 files in other folders)
